Homework2.css
body {
    background-color: cornflowerblue;
}

#shippingAddress {
    display: block;
}

form {
    margin-left: 20vh;
    margin-left: 20%;
    margin-right: 20vh;
    margin-right: 20%;
    margin-top: 5vh;
    margin-top: 5%;
    margin-bottom: 5;
    margin-bottom: 5%;
    width: 70%;
    display: inline-flex
}

#checkout-form {
    padding-left: 5vh;
    padding-left: 5%;
    padding-bottom: 2vh;
    padding-bottom: 2%;
    background-color: whitesmoke;
    width: 60%
}

#shopping-cart {
    background-color: whitesmoke;
    width: 35%;
    max-height: 57ch;
    margin-left: 4%;
}

#shopping-cart h2 {
    text-align: center;
    padding-top: 4vh;
    padding-top: 4%;
}

h1 {
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 150;
    padding-top: 2vh;
    padding-top: 2%;
}

h2, label, input, p { 
    font-family: Arial, Helvetica, sans-serif;
    font-weight: lighter;
}

#two-in-outer-box {
    width: 100%;
    display: inline-flex;
}

#inner-box-left {
    width: 44%;
}

#inner-box-right {
    margin-left: 2vh;
    margin-left: 2%;
    width: 44%;
}

#outer-box {
    width: 90%;
}

#username {
    width: 34.2%;
}

#fname, #lname {
    width: 100%
}

#left-box {
    width: 100%
}

#middle-box {
    width: 60%;
    margin-left: 2%;
    margin-left: 2vh;
    margin-right: 2%;
    margin-right: 2vh;
}

#right-box {
    width: 50%
}

#box-3 {
    display: inline-flex;
    width: 90%;
}

#radio-checks {
    display: inline-flex;
    width: 60%;
}

#middle-option {
    margin-left: 4%;
    margin-right: 4%;
}

#xs-box-left {
    margin-right: 2%;
}

button {
    width: 90%;
}

hr {
    width: 90%;
    margin-left: 0%;
}

#cart-items {
    background-color: white;
    margin-left: 6%;
    margin-right: 6%;
}

#item, #coupon, #total{
    display: flex;
    justify-content: space-between;
    margin-left: 6%;
    margin-right: 6%;
    margin-top: 6%;
    border-bottom: 1px solid gainsboro;
}

p {
    color: gray;
    font-size: medium; 
}

#coupon h5, #coupon p {
    color: green;
}

#total {
    margin-bottom: 4%;
    border-bottom: none;
}

.input-group {
    background-color: whitesmoke;
    padding-top: 30px;
    border: none;
    padding-right: 0%;
    margin-right: 0%;
}

.input-group-append {
    width: 100px;
}

.input-group-append :hover {
    background: green;
}

#first-product, #first-price {
    padding-top: 8px;
}

#address-box {
    margin-top: 0;
    padding-top: 0;
    display: flex;
}

